--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Home work 6</title>
+            <title>Home work 7</title>
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
  
   <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container container-header">
       <nav class="page-navigation" >
         <a class="logo link" href="./index.html">Web<span class="logo-naim">Studio</span></a>
@@ -38,7 +38,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Герой -->
@@ -51,7 +51,7 @@
       </section>
 
       <!--2 секція----- Особенности -->
-      <section class="description">
+      <!-- <section class="description">
         <div class="container container-description">
         <h2 class="visually-hidden" >Hang</h2> 
         <ul class="list description-list">
@@ -103,10 +103,10 @@
           </li>
         </ul>
         </div>
-      </section>
+      </section>  -->
 
       <!--3 секція---- Примеры работ -->
-      <section class="work">
+      <!-- <section class="work">
         <div class="container container-work">
         <h2 class="subject">What are we doing</h2>
 
@@ -122,10 +122,10 @@
           </li>
         </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- 4 секція----Our Team -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
         <h2 class="subject team-list">Our Team</h2>
         <ul class="list list-people">
@@ -379,10 +379,10 @@
           </li>
         </ul>
         </div>
-      </section>
+      </section> -->
    
     <!-- 5 секція----Customers -->
-    <section class="customers-section">
+    <!-- <section class="customers-section">
       <div class="container">
          <h2 class="title-customers">Customers</h2>
       <ul class="customers list">
@@ -432,11 +432,11 @@
                   </li>
                 </ul>
       </div>
-    </section>
+    </section> -->
      </main>
 
     <!-- Футер -->
-   <footer class="footer-stile">
+   <!-- <footer class="footer-stile">
       <div class="container container-footer">
         <div class="footer-logo">
       <a class="logo link footers" href="./index.html">Web<span class="logo-footer">Studio</span></a>
@@ -522,10 +522,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
 <!-- Modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn"  type="button" data-modal-close>
           <svg class="modal-icon" width="20" height="20">
@@ -612,7 +612,7 @@
           <button class="modal-btn-modal btn" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
