--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
   <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container container-header">
       <nav class="page-navigation" >
         <a class="logo link" href="./index.html">Web<span class="logo-naim">Studio</span></a>
@@ -35,8 +35,7 @@
                 </svg>
             </button>
 
-            <!-- Посилання на пошту/Посилання на телефон-->
-        <address class="contacts">
+          <address class="contacts">
           <ul class="list-mobile list">
              <li class="menu-item">
                  <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -47,7 +46,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Герой -->
@@ -134,7 +133,7 @@
       </section> -->
 
       <!-- 4 секція----Our Team -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
         <h2 class="subject team-list">Our Team</h2>
         <ul class="list list-people">
@@ -388,8 +387,7 @@
           </li>
         </ul>
         </div>
-      </section> -->
-   
+      </section> 
 
     <!-- 5 секція----Customers -->
     <!-- <section class="customers-section">
@@ -624,7 +622,7 @@
       </div>
     </div> -->
     <!-- Mobile menu -->
-    <div class="mobile-menu js-menu-container" id="mobile-menu">
+    <!-- <div class="mobile-menu js-menu-container" id="mobile-menu">
         <div class="mobile-menu-container">
             <button type="button" class="mobile-close-btn js-close-menu">
                 <svg class="mobile-close-btn-icon" width="8" height="8">
@@ -705,7 +703,7 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
+                </ul> -->
 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
