--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
   <body>
     <!-- Шапка сайта -->
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container container-header">
       <nav class="page-navigation" >
         <a class="logo link" href="./index.html">Web<span class="logo-naim">Studio</span></a>
@@ -46,7 +46,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- Герой -->
@@ -133,7 +133,7 @@
       </section> -->
 
       <!-- 4 секція----Our Team -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
         <h2 class="subject team-list">Our Team</h2>
         <ul class="list list-people">
@@ -387,7 +387,7 @@
           </li>
         </ul>
         </div>
-      </section> 
+      </section>  -->
 
     <!-- 5 секція----Customers -->
     <!-- <section class="customers-section">
@@ -631,18 +631,16 @@
             </button>
             <div class="main-mob-wrap">
                 <div class="mob-wrap-link">
-                    <ul class="mobile-nav list">
-                        <li class="mobile-list"><a href="./index.html" class="mob-item link mob-current">Studio</a>
-                        </li>
-                        <li class="mobile-list"><a href="./portfolio.html" class="mob-item link">Portfolio</a>
-                        </li>
-                        <li class="mobile-list"><a href="" class="mob-item link">Contacts</a></li>
-                    </ul>
+                    <ul class="menu-mobile list nav">
+          <li class="menu-item"><a class="menu-link link current" href="./index.html" >Studio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
+        </ul>
                 </div>
 
                 <div class="mob-wrap-cont">
                     <address class="mobile-adress">
-                        <ul class="mobile-contact list">
+                         <ul class="mobile-contact list">
                             <li class="mobile-contact-it"><a href="tel:+110001111111"
                                     class="mobile-item-tel link">+11(000)111-11-11</a></li>
                             <li class="mobile-contact-it"><a href="mailto:info@devstudio.com"
@@ -703,8 +701,8 @@
                       </svg>
                     </a>
                   </li>
-                </ul> -->
-
+                </ul>
+                </div> -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
