--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
       <nav class="page-navigation" >
         <a class="logo link" href="./index.html">Web<span class="logo-naim">Studio</span></a>
 
-        <ul class="menu-mobile list nav">
+        <ul class="nav-list list">
           <li class="menu-item"><a class="menu-link link current" href="./index.html" >Studio</a></li>
           <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
           <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-        <button type="button" class="mobile-menu-open js-open-menu" aria-expanded="false"
-                aria-controls="mobile-menu">
-                <svg class="icon-hamburg" width="32" height="22">
-                    <use href="./images/icon.svg#icon-hamburger">
-                    </use>
-                </svg>
-            </button>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="menu-toggle-icon" width="32" height="32">
+            <use href="./images/icons.svg#icon-burger-menu"></use>
+          </svg>
+        </button>
 
           <address class="contacts">
           <ul class="list-mobile list">
