--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
       </div>
     </div> -->
     <!-- Mobile menu -->
-    <!-- <div class="mobile-menu js-menu-container" id="mobile-menu">
+    <div class="mobile-menu js-menu-container" id="mobile-menu">
         <div class="mobile-menu-container">
             <button type="button" class="mobile-close-btn js-close-menu">
                 <svg class="mobile-close-btn-icon" width="8" height="8">
@@ -704,7 +704,7 @@
                     </a>
                   </li>
                 </ul>
-                </div> -->
+                </div> 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
