щось пішло не так

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
     <main>
       <!-- Герой -->
-      <!-- <section class="hero">
+       <section class="hero">
         <div class="container container-hero">
         <h1 class="hero-title">Effective Solutions for Your Business 
         </h1>
         <button class="btn" type="button" data-modal-open>Order Service </button>
       </div>     
-      </section> -->
+      </section> 
 
       <!--2 секція----- Особенности -->
-      <!-- <section class="description">
+       <section class="description">
         <div class="container container-description">
         <h2 class="visually-hidden" >Hang</h2> 
         <ul class="list description-list">
@@ -113,10 +113,10 @@
           </li>
         </ul>
         </div>
-      </section>  -->
+      </section>  
 
       <!--3 секція---- Примеры работ -->
-      <!-- <section class="work">
+       <section class="work">
         <div class="container container-work">
         <h2 class="subject">What are we doing</h2>
 
@@ -132,10 +132,10 @@
           </li>
         </ul>
         </div>
-      </section> -->
+      </section> 
 
       <!-- 4 секція----Our Team -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
         <h2 class="subject team-list">Our Team</h2>
         <ul class="list list-people">
@@ -389,7 +389,7 @@
           </li>
         </ul>
         </div>
-      </section>  -->
+      </section> 
 
     <!-- 5 секція----Customers -->
     <!-- <section class="customers-section">
@@ -705,6 +705,7 @@
                   </li>
                 </ul>
                 </div> 
+            </div>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
