--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <li class="team-group">
             <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264">
             <div class="card-content">
-              <h3 class="subtitle team-subtitle">Mark Guerrero</h3>
+              <h3 class="team-subtitle">Mark Guerrero</h3>
               <p class="text text-subtitle">Product Designer</p>
 
               <ul class="socials list">
@@ -206,7 +206,7 @@
           <li class="team-group">
              <img src="./images/Tom.jpg" alt="Tom Ford" width="264">
              <div class="card-content">
-             <h3 class="subtitle team-subtitle">Tom Ford</h3>
+             <h3 class="team-subtitle">Tom Ford</h3>
              <p class="text text-subtitle">Frontend Developer</p>
              <ul class="socials list">
                   <li class="socials-item">
@@ -267,7 +267,7 @@
           <li class="team-group">
             <img src="./images/Camila.jpg" alt="Camila Garcia" width="264">
             <div class="card-content">
-            <h3 class="subtitle team-subtitle">Camila Garcia</h3>
+            <h3 class=" team-subtitle">Camila Garcia</h3>
             <p class="text text-subtitle">Marketing</p>
              <ul class="socials list">
                   <li class="socials-item">
@@ -328,7 +328,7 @@
           <li class="team-group">
             <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264">
             <div class="card-content">
-            <h3 class="subtitle team-subtitle">Daniel Wilson</h3>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
             <p class="text text-subtitle">UI Designer</p>
              <ul class="socials list">
                   <li class="socials-item">
