--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         <h2 class="subject team-list">Our Team</h2>
         <ul class="list list-people">
           <li class="team-group">
-            <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264">
+           <img srcset="./images/TeamCard_1@2x.jpg 2x" src="./images/TeamCard_1@1x.jpg"
+                            alt="Photo Mark Guerrero" width="264" loading="lazy">
             <div class="card-content">
               <h3 class="team-subtitle">Mark Guerrero</h3>
               <p class="text text-subtitle">Product Designer</p>
@@ -206,7 +207,8 @@
             </div>
            </li>
           <li class="team-group">
-             <img src="./images/Tom.jpg" alt="Tom Ford" width="264">
+             <img srcset="./images/TeamCard_2@2x.jpg 2x" src="./images/TeamCard_2@1x.jpg"
+                            alt="Photo Tom Ford" width="264" loading="lazy">
              <div class="card-content">
              <h3 class="team-subtitle">Tom Ford</h3>
              <p class="text text-subtitle">Frontend Developer</p>
@@ -267,7 +269,8 @@
              </div>
           </li>
           <li class="team-group">
-            <img src="./images/Camila.jpg" alt="Camila Garcia" width="264">
+         <img srcset="./images/TeamCard_3@2x.jpg 2x" src="./images/TeamCard_3@1x.jpg"
+                            alt="Photo Camila Garcia" width="264" loading="lazy">
             <div class="card-content">
             <h3 class=" team-subtitle">Camila Garcia</h3>
             <p class="text text-subtitle">Marketing</p>
@@ -328,7 +331,8 @@
             </div>
           </li>
           <li class="team-group">
-            <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264">
+            <img srcset="./images/TeamCard_4@2x.jpg 2x" src="./images/TeamCard_4@1x.jpg"
+                            alt="Photo Daniel Wilson" width="264" loading="lazy">
             <div class="card-content">
             <h3 class="team-subtitle">Daniel Wilson</h3>
             <p class="text text-subtitle">UI Designer</p>
@@ -661,59 +665,59 @@
       </ul>
 
       <ul class="mobile-social list">
-        <li class="socials-item">
-          <a
-            class="social-link link"
-            href="https://www.instagram.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Instagram icon"
-          >
-            <svg class="socials-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="socials-item">
-          <a
-            class="social-link link"
-            href="https://twitter.com/?lang=ru"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Twitter icon"
-          >
-            <svg class="socials-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="socials-item">
-          <a
-            class="social-link link"
-            href="https://uk-ua.facebook.com/"
-            target="_blank"
-            rel="noopener nereferrer"
-            aria-label="Facebook icon"
-          >
-            <svg class="socials-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="socials-item">
-          <a
-            class="social-link link"
-            href="https://www.linkedin.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Linkedin icon"
-          >
-            <svg class="socials-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link-footer link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Instagram icon"
+                    >
+                      <svg class="socials-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link-footer link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter icon"
+                    >
+                      <svg class="socials-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link-footer link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook icon"
+                    >
+                      <svg class="socials-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      class="socials-link-footer link"
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Linkedin icon"
+                    >
+                      <svg class="socials-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
     </div>
          
    <script
