коригування після ментора

--- a/index.html
+++ b/index.html
@@ -644,22 +644,22 @@
       </button>
 
       <ul class="mobile-menu list">
-        <li>
+        <li class="mobile-new">
           <a href="./index.html" class="mobile-menu-items current link">Studio</a>
         </li>
-        <li>
+        <li class="mobile-new">
           <a href="./portfolio.html" class="mobile-menu-items link">Portfolio</a>
         </li>
-        <li>
+        <li class="mobile-new">
           <a href="" class="mobile-menu-items link">Contacts</a>
         </li>
       </ul>
 
       <ul class="mobile-contacts list">
-        <li>
+        <li class="mobile-new">
           <a class="mobile-burger-tel" href="tel:">+11 (000) 111-11-11</a>
         </li>
-        <li>
+        <li class="mobile-new">
           <a class="mobile-burger-mail" href="mailto:">info@devstudio.com</a>
         </li>
       </ul>
