--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <!-- Герой -->
        <section class="hero">
-        <div class="container container-hero">
+        <div class="container-hero">
         <h1 class="hero-title">Effective Solutions for Your Business 
         </h1>
         <button class="btn" type="button" data-modal-open>Order Service </button>
