--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
         <!-- </svg> -->
       </button>
 
-      <ul class="mobile-menu list">
+      <ul class="mobile-menu list-burger">
         <li class="mobile-new">
           <a href="./index.html" class="mobile-menu-items current link">Studio</a>
         </li>
@@ -655,7 +655,7 @@
         </li>
       </ul>
 
-      <ul class="mobile-contacts list">
+      <ul class="mobile-contacts list-burger">
         <li class="mobile-new">
           <a class="mobile-burger-tel" href="tel:">+11 (000) 111-11-11</a>
         </li>
